Fix patient list column visibility

--- a/apps/vue-mri-ui-lib/src/styles/patientListControl.scss
+++ b/apps/vue-mri-ui-lib/src/styles/patientListControl.scss
@@ -31,7 +31,7 @@ div.patientlist-control {
       display: flex;
       align-items: center;
       div.textContent {
-        width: 0px;
+        width: auto;
         flex: 2 2;
         white-space: nowrap;
         overflow: hidden;
